; ModuleID = '/home/carl/AnghaBench/libsodium/src/libsodium/crypto_sign/ed25519/extr_sign_ed25519.c_crypto_sign_ed25519ph_final_create.c'
source_filename = "/home/carl/AnghaBench/libsodium/src/libsodium/crypto_sign/ed25519/extr_sign_ed25519.c_crypto_sign_ed25519ph_final_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@crypto_hash_sha512_BYTES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @crypto_sign_ed25519ph_final_create(%struct.TYPE_3__* %0, i8* %1, i64* %2, i8* %3) #0 {
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64* %2, i64** %7, align 8
  store i8* %3, i8** %8, align 8
  %11 = load i32, i32* @crypto_hash_sha512_BYTES, align 4
  %12 = zext i32 %11 to i64
  %13 = call i8* @llvm.stacksave()
  store i8* %13, i8** %9, align 8
  %14 = alloca i8, i64 %12, align 16
  store i64 %12, i64* %10, align 8
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = call i32 @crypto_hash_sha512_final(i32* %16, i8* %14)
  %18 = load i8*, i8** %6, align 8
  %19 = load i64*, i64** %7, align 8
  %20 = trunc i64 %12 to i32
  %21 = load i8*, i8** %8, align 8
  %22 = call i32 @_crypto_sign_ed25519_detached(i8* %18, i64* %19, i8* %14, i32 %20, i8* %21, i32 1)
  %23 = load i8*, i8** %9, align 8
  call void @llvm.stackrestore(i8* %23)
  ret i32 %22
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @crypto_hash_sha512_final(i32*, i8*) #2

declare dso_local i32 @_crypto_sign_ed25519_detached(i8*, i64*, i8*, i32, i8*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
